WOLEET-2546: Avoid text cropped in toaster

--- a/src/app/shared/components/toast/toast.component.scss
+++ b/src/app/shared/components/toast/toast.component.scss
@@ -9,7 +9,7 @@
   padding: $standard-space * 3;
   display: inline-flex;
   width: 350px;
-  height: 90px;
+  min-height: 90px;
   box-shadow: 6px 6px 12px $color-box-shadow;
 
   flex-flow: row nowrap;
